# AirlineTycoon

./: .gitignore  .gitmodules  AT.dsw  AT.sln  AirlineTycoon.sln  CMakeLists.txt  License.txt  README.md
.github/ISSUE_TEMPLATE/: FEATURE-REQUEST.yml  bug_report.md
.github/workflows/: cmake.yml
Sourcecode für SB/: Abend.cpp  Abend.h  AirportView.cpp  AirportView.h  Askbrick.cpp  AtNet.h  Aufsicht.cpp  Bank.h  Blenden.h  Block.cpp  Brick.cpp  Buero.Cpp  Cblenden.h  Checkup.h  DeltaVid.cpp  Designer.cpp  Designer.h  Dialog.cpp  Fracht.h  Gameframe.cpp  Gameframe.h  Globe.cpp  HLine.cpp  HLine.h  HalldiskMenu.cpp  Insel.h  Kiosk.cpp  Kiosk.h  Laptop.cpp  Laptop.h  Mainfrm.cpp  Makler.cpp  Makler.h  Misc.cpp  Nasa.cpp  NewgamePopup.h  Options.h  Outro.h  PNet.cpp  Personal.cpp  (+64 more)
cmake/: FindSDL2-gfx.cmake  FindSDL2-image.cmake  FindSDL2-mixer.cmake  FindSDL2-net.cmake  FindSDL2-ttf.cmake  FindSDL2.cmake
libs/: CMakeLists.txt  SBL.lib  SSE.lib  TeakLibW.lib
libs/CrashRpt/install/lib/: sentry.lib
libs/libsmacker/: CMakeLists.txt  Makefile.am  configure.ac  driver.vcxproj  driver.vcxproj.filters  libsmacker.sln  libsmacker.vcxproj  libsmacker.vcxproj.filters  smacker.c  smk2avi.vcxproj  smk2avi.vcxproj.filters  smk_hufftree.c
libs/raknet/: CMakeLists.txt  RakNet.vcxproj  RakNet.vcxproj.filters  TableSerializer.cpp  cmake_install.cmake  raknet.sln
libsmacker/: libsmacker.dsp
src/: AT.DSP  AT.sln  AT.vcxproj  AT.vcxproj.filters  Abend.cpp  Abend.h  AirportView.cpp  AirportView.h  ArabAir.cpp  ArabAir.h  AskBrick.h  Askbrick.cpp  AtNet.cpp  AtNet.h  Aufsicht.cpp  Aufsicht.h  Auftrag.cpp  Bank.cpp  Bank.h  Blenden.cpp  Block.cpp  Brick.cpp  Buero.Cpp  Buero.cpp  Buero.h  CMakeLists.txt  Cblenden.cpp  Checkup.cpp  Checkup.h  City.Cpp  Colorfx.cpp  Colorfx.h  Credits.cpp  Credits.h  DataTabl.Cpp  DataTabl.cpp  Designer.cpp  Designer.h  Dialog.cpp  DutyFree.cpp  (+140 more)
src/Res/: Script2.aps  Script2.rc  resource.h
src/SBLib/: CMakeLists.txt  SBLib.vcxproj  SBLib.vcxproj.filters
src/SBLib/include/: BaseNetworkType.hpp  ENetNetwork.hpp  RAKNetNetwork.hpp  RAKNetRoomCallbacks.hpp  SbLib.h  network.h
src/SBLib/libs/rooms-plugin/: RoomTypes.cpp  RoomTypes.h  RoomsContainer.cpp  RoomsContainer.h  RoomsPlugin.cpp  RoomsPlugin.h
src/SBLib/source/: CBitmap.cpp  CCursor.cpp  CFont.cpp  GfxLib.cpp  Network.cpp  Tool2.cpp
src/SBLib/source/NetworkTypes/: ENetNetwork.cpp  RAKNetNetwork.cpp
src/SSE/: CMakeLists.txt  SSE.cpp  SSE.vcxproj  SSE.vcxproj.filters
src/TeakLibW/: Album.cpp  Bitmap.cpp  CMakeLists.txt  Debug.cpp  Math.cpp  TeakFile.cpp  TeakLibW.vcxproj  TeakLibW.vcxproj.filters  TeakStr.cpp  TextRes.cpp
